welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if(a+b==10 || a==10 ||b==10){
        ^